translatable/tests/dynamic/invalid_syntax.stderr
error: expected `,`
 --> tests/dynamic/invalid_syntax.rs:6:13
  |
6 |     let _ = translation!(lang);
  |             ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `translation` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `String: From<{integer}>` is not satisfied
  --> tests/dynamic/invalid_syntax.rs:11:13
   |
11 |     let _ = translation!(lang, path);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<{integer}>` is not implemented for `String`
   |
   = help: the following other types implement trait `From<T>`:
             `String` implements `From<&String>`
             `String` implements `From<&mut str>`
             `String` implements `From<&str>`
             `String` implements `From<Box<str>>`
             `String` implements `From<Cow<'_, str>>`
             `String` implements `From<char>`
   = note: required for `{integer}` to implement `Into<String>`
   = note: this error originates in the macro `translation` (in Nightly builds, run with -Z macro-backtrace for more info)
